Firefox fixes: hexagon z-index, trophy positioning

--- a/app/styles/objects/_hexagons.scss
+++ b/app/styles/objects/_hexagons.scss
@@ -159,4 +159,9 @@
 	top: 8px;
 	left: 22px;
 	margin-bottom: 36px;
+
+	img {
+		margin: auto;
+		display: block;
+	}
 }
